; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_asus-wmi.c_asus_wmi_backlight_notify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_asus-wmi.c_asus_wmi_backlight_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.asus_wmi = type { %struct.backlight_device* }
%struct.backlight_device = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@NOTIFY_BRNUP_MIN = common dso_local global i32 0, align 4
@NOTIFY_BRNUP_MAX = common dso_local global i32 0, align 4
@NOTIFY_BRNDOWN_MIN = common dso_local global i32 0, align 4
@NOTIFY_BRNDOWN_MAX = common dso_local global i32 0, align 4
@BACKLIGHT_UPDATE_HOTKEY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.asus_wmi*, i32)* @asus_wmi_backlight_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @asus_wmi_backlight_notify(%struct.asus_wmi* %0, i32 %1) #0 {
  %3 = alloca %struct.asus_wmi*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.backlight_device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.asus_wmi* %0, %struct.asus_wmi** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load %struct.asus_wmi*, %struct.asus_wmi** %3, align 8
  %9 = getelementptr inbounds %struct.asus_wmi, %struct.asus_wmi* %8, i32 0, i32 0
  %10 = load %struct.backlight_device*, %struct.backlight_device** %9, align 8
  store %struct.backlight_device* %10, %struct.backlight_device** %5, align 8
  %11 = load %struct.backlight_device*, %struct.backlight_device** %5, align 8
  %12 = getelementptr inbounds %struct.backlight_device, %struct.backlight_device* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %6, align 4
  %15 = load i32, i32* %6, align 4
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* @NOTIFY_BRNUP_MIN, align 4
  %18 = icmp sge i32 %16, %17
  br i1 %18, label %19, label %28

19:                                               ; preds = %2
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @NOTIFY_BRNUP_MAX, align 4
  %22 = icmp sle i32 %20, %21
  br i1 %22, label %23, label %28

23:                                               ; preds = %19
  %24 = load i32, i32* %4, align 4
  %25 = load i32, i32* @NOTIFY_BRNUP_MIN, align 4
  %26 = sub nsw i32 %24, %25
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %7, align 4
  br label %41

28:                                               ; preds = %19, %2
  %29 = load i32, i32* %4, align 4
  %30 = load i32, i32* @NOTIFY_BRNDOWN_MIN, align 4
  %31 = icmp sge i32 %29, %30
  br i1 %31, label %32, label %40

32:                                               ; preds = %28
  %33 = load i32, i32* %4, align 4
  %34 = load i32, i32* @NOTIFY_BRNDOWN_MAX, align 4
  %35 = icmp sle i32 %33, %34
  br i1 %35, label %36, label %40

36:                                               ; preds = %32
  %37 = load i32, i32* %4, align 4
  %38 = load i32, i32* @NOTIFY_BRNDOWN_MIN, align 4
  %39 = sub nsw i32 %37, %38
  store i32 %39, i32* %7, align 4
  br label %40

40:                                               ; preds = %36, %32, %28
  br label %41

41:                                               ; preds = %40, %23
  %42 = load i32, i32* %7, align 4
  %43 = load %struct.backlight_device*, %struct.backlight_device** %5, align 8
  %44 = getelementptr inbounds %struct.backlight_device, %struct.backlight_device* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %44, i32 0, i32 0
  store i32 %42, i32* %45, align 4
  %46 = load %struct.backlight_device*, %struct.backlight_device** %5, align 8
  %47 = call i32 @backlight_update_status(%struct.backlight_device* %46)
  %48 = load %struct.backlight_device*, %struct.backlight_device** %5, align 8
  %49 = load i32, i32* @BACKLIGHT_UPDATE_HOTKEY, align 4
  %50 = call i32 @backlight_force_update(%struct.backlight_device* %48, i32 %49)
  %51 = load i32, i32* %6, align 4
  ret i32 %51
}

declare dso_local i32 @backlight_update_status(%struct.backlight_device*) #1

declare dso_local i32 @backlight_force_update(%struct.backlight_device*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
